--- a/ci_hr/views/views.xml
+++ b/ci_hr/views/views.xml
@@ -28,18 +28,46 @@
                 <field name="message_follower_ids" widget="mail_followers"/>
                 <field name="message_ids" widget="mail_thread"/>
             </div>
+            <xpath expr="//form/sheet" position="after">
+              <notebook>
+                <page string="Interview-Schedule-Info">
+                  <group>
+                    <group>
+                  <field name="date"/>
+                   <field name="interviewr_name"/>
+                    </group>
+                  </group>
+                </page>
+              </notebook>
+            </xpath>
         
 
       </field>
-       <!-- <div class="oe_button_box" name="button_box">
+      <!--  <div class="oe_button_box" name="button_box">
                     <button name="" class="oe_stat_button" icon="fa-calendar" type="object" help="Schedule interview with this applicant">
                         <div class="o_form_field o_stat_info">
                             <span class="o_stat_text">Daily report</span>
                          </div>
                     </button>
-                  </div> -->
-
+                  </div>
+ -->
     </record>
+    <!-- <record id="report_view" model="ir.ui.view">
+      <field name="name">Report-View</field>
+      <field name="model">hr.employee</field>
+      <field name="inherit_id" ref="hr.view_employee_form"/>
+      <field name="arch" type="xml">
+        <xpath expr="/form/sheet/div/button" position="after">
+          <button name="daily_report_employee" class="oe_stat_button" icon="fa-file" type="object" help="Schedule interview with this applicant">
+                        <div class="o_form_field o_stat_info">
+                            <span class="o_stat_text">Daily report</span>
+                         </div>
+                    </button>
+        </xpath>
+        
+      </field>
+    </record> -->
+
 
     <record id="hr_department_tree" model="ir.ui.view">
       <field name="name">HR Department tree</field>
